--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
-.slider {
-    margin: 0 auto;
-    width: 800px;
+* {
+    box-sizing: border-box;
+}
+
+.slider-list-wrapper {
     overflow: hidden;
 }
 
@@ -8,8 +10,6 @@
     list-style-type:none;
     margin: 0;
     padding: 0;
-    transition-timing-function: ease;
-    transition-duration: 1s;
 }
 
 .slider-list:after {
@@ -21,13 +21,24 @@
 }
 
 .slider-list-item {
+    position: relative;
     float: left;
-    width: 255px;
-    height: 195px;
-    margin-right: 10px;
     border: 2px solid blue;
-    transition-timing-function: ease;
-    transition-duration: 2s;
+}
+
+.slider-list-item:before {
+    display: block;
+    content: "";
+    width: 100%;
+    padding-top: 56.25%;
+}
+
+.slider-list-img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
 }
 
 .slider-list-item.current {
@@ -35,6 +46,5 @@
 }
 
 .slider-list-item img {
-    width: 100%;
     height: 100%;
 }
